PROJECT(zCppSrc) # 指定工程名称
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2) # 指定最小的版本

# 当前的路径
set(Apue_src_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# 最后添加子目录
SET(__SUBDIRECTORY Animal Expr expr-advance)
FOREACH(SUBDIRECTORY ${__SUBDIRECTORY})
  # ADD_SUBDIRECTORY(${SUBDIRECTORY})
  ADD_SUBDIRECTORY(${SUBDIRECTORY})
ENDFOREACH(SUBDIRECTORY)




# 最后打印数据
message(STATUS "${PROJECT_NAME}::Compile zCpp's project.")
